--- a/attendance.html
+++ b/attendance.html
@@ -10,28 +10,25 @@
 <body>
 <!--login for administrator begins here-->
 <div class="container">
-  <h2>Administrator</h2>
+  <h2>Attendance form</h2>
   <form>
     <div class="form-group">
-      <label for="firstName">First Name</label>
+      <label for="firstName">Name or identifier</label>
       <input type="text" id="firstName" name="firstName" required>
     </div>
     <div class="form-group">
-      <label for="lastName">Last Name</label>
+      <label for="lastName">Date and time </label>
       <input type="text" id="lastName" name="lastName" required>
     </div>
     <div class="form-group">
-      <label for="email">Email</label>
+      <label for="email">Department</label>
       <input type="email" id="email" name="email" required>
     </div>
     <div class="form-group">
-      <label for="password">Password</label>
+      <label for="password">Signature or confirmation</label>
       <input type="password" id="password" name="password" required>
     </div>
-    <div class="form-group">
-      <a href="#" class="forgot-password">Forgot Password?</a>
-    </div>
-    <button type="submit"id="loginButton"  class="btn">Login</button>
+    <button type="submit" class="btn">Submit</button>
   </form>
 </div>
 <!--administartor login ends here-->
